--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: Landing Page
-subTitle: A Template by Start Bootstrap
+title: AVP Software
+subTitle: Building the future
 ---
